JSampler v0.9: 2009-08-03
  * Implemented a backend list with option to manually choose a backend
    to connect on startup(Edit/Preferences, then click the `Backend' tab)
    and option to change the backend without restarting JSampler
    (Actions/Change Backend or Ctrl + B)

  * Added confirmation messages for removing sampler channels and
    audio/MIDI devices (Edit/Preferences, then click the `View' tab)

  * The column sort order in the Instruments Database window is now saved
    for the next session

  * Optimized the MIDI instrument update process

  * Added support for handling lost files in the Instruments Database
    (In the Instruments Database window choose Actions/Check For Lost Files)

  * Added new menu item in the Instruments Database window: Edit/Find

  * Remember the last used tab in the Preferences dialog

  * Renamed the column labels in the Channel Routing dialog: The column
    representing the sampler channel's audio channels is "Audio In" and
    the column representing the audio device's channels is "Audio Out"

  * Orchestras, orchestra instruments, MIDI maps and MIDI instruments
    can now be removed using the `Delete' key from the keyboard

  * Added toolbar to the Database Instrument Chooser dialog

  * Instrument Chooser and Database Instrument Chooser dialogs
    are now resizable

  * Reimplemented the MIDI bank/program assignment algorithm

  * Added `Copy To' and `Move To' commands to the MIDI bank context menu
    and to the MIDI instrument context menu

  * Added commands to the MIDI instrument context menu for moving
    a MIDI instrument to another program
    (right-click on a MIDI instrument and choose `Change Program')

  * Added option to choose between zero-based and one-based
    MIDI bank/program numbering
    (choose Edit/Preferences, then click the `Advanced' button)

  * Added option to choose whether to include MIDI instrument
    mappings when exporting a sampler configuration to LSCP script.