@@ -38,6 +38,7 @@ JSAddDbInstrumentsFromFileDlg.title = Add Instruments From File
 
 JSAddDbInstrumentsProgressDlg.title = Scanning...
 
+JSAddMidiInstrumentDlg.checkApplyToAll = Remember decision and apply to all selected instruments
 JSAddMidiInstrumentDlg.lBank = MIDI Bank:
 JSAddMidiInstrumentDlg.lLoadMode = Load mode:
 JSAddMidiInstrumentDlg.lName = Name:
