@@ -1,3 +1,10 @@
+ CVS HEAD
+  * Added check box "Remember decision and apply to all selected instruments"
+    to the "Map MIDI instrument" dialog when adding multiple selection
+
+  * Fantasia:
+    - Added option to keep Fantasia always on top (View/Always On Top)
+
 JSampler v0.9: 2009-08-03
   * Implemented a backend list with option to manually choose a backend
     to connect on startup(Edit/Preferences, then click the `Backend' tab)
